--- a/reactCalculator/src/App.css
+++ b/reactCalculator/src/App.css
@@ -4,7 +4,7 @@ body {
 
 .result {
   height: 60px;
-  background-color: greenyellow;
+  background-color: rgb(128, 165, 73);
   width: 100%;
 }
 
@@ -21,10 +21,12 @@ body {
 
 .button {
   display: block;
-  background-color: yellow;
+  /* background-color: yellow; */
 }
 
 button {
+  border: rgb(240, 225, 95);
+  border-style: inset;
   width: 25%;
   height: 60px;
   font-size: 30px;
